--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   ],
   "engines": {
-    "node": "0.10.22"
+    "node": "0.10.27"
   },
   "scripts": {
     "test": "grunt test"
@@ -40,7 +40,7 @@
     "grunt": "~0.4.0"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin libsass sass scss"
   ],
   "dependencies": {
     "chalk": "^0.4.0",
